--- a/3.html
+++ b/3.html
@@ -21,7 +21,7 @@
       </div>
       <div id="collapseOne" class="collapse" data-parent="#accordion">
         <div class="card-body">
-          <iframe width="100%" height="400px" src="https://www.youtube.com/embed/E6FumWxBJDE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+          <iframe width="100%" height="400px" src="https://www.youtube.com/embed/AAGC50E5TOg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
       </div>
       <div id="collapseTwo" class="collapse" data-parent="#accordion">
         <div class="card-body">
-          <iframe width="100%" height="400px" src="https://www.youtube.com/embed/E6FumWxBJDE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+          <iframe width="100%" height="400px" src="https://www.youtube.com/embed/Ywk2DzBUACU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
       </div>
       <div id="collapseThree" class="collapse" data-parent="#accordion">
         <div class="card-body">
-          <iframe width="100%" height="400px" src="https://www.youtube.com/embed/E6FumWxBJDE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+          <iframe width="100%" height="400px" src="https://www.youtube.com/embed/08g0o80iCPg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
         </div>
       </div>
     </div>
